--- a/cv.tex
+++ b/cv.tex
@@ -5,9 +5,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{polski}
 
-\usepackage[a4paper, margin=1in]{geometry}
+\usepackage[a4paper, margin=0.5in]{geometry}
 
-\firstname{Jakub} 
+\firstname{Jakub}
 \familyname{Wida}
 \title{Curriculum Vitae}
 \address{Pleszowska 16}{Kraków, 31-228}
@@ -26,7 +26,8 @@
 
 \cventry{2010--2013}{Matura międzynarodowa}{International Baccalaureate}{\newline VIII Prywatne Akademickie Liceum Ogólnokształcące w Krakowie}{}{}
 
-\cventry{2014--2017}{Studia Matematyczno-Przyrodnicze, \newline kierunek wiodący: Informatyka}{\newline ukończony I stopień}{ \newline Uniwersytet Jagielloński w Krakowie, wydział Fizyki, Astronomii i Informatyki Stosowanej}{ }{}{}
+\cventry{2014--2017}{Studia Matematyczno-Przyrodnicze, I stopień, \newline kierunek wiodący: Informatyka}{ukończono}{ \newline Uniwersytet Jagielloński w Krakowie, wydział Fizyki, Astronomii i Informatyki Stosowanej}{ }{}{}
+\cventry{2017--Obecnie}{Informatyka Stosowana, II stopień}{w trakcie - I rok II stopnia}{}{ \newline Uniwersytet Jagielloński w Krakowie, wydział Fizyki, Astronomii i Informatyki Stosowanej}{}{}{}
 \section{Doświadczenie}
 \cventry{2017}{General Intelligence Systems ltd.}{Praktyki 3-tygodniowe}{\newline front-end developer}{}{}{}{}
 \section{Cel zawodowy}
@@ -41,7 +42,7 @@
 \cvitem{Ponad-podstawowa}
 	{\begin{itemize}%
 	\item \textbf{SQL: MySQL, SQLite};
-	\item \textbf{Java} w tym biblioteka Swing;
+	\item \textbf{Java};
 	\item \textbf{HTML5, CSS3} (metodologia RWD);
 	\end{itemize}}
 \cvitem{Średnio-zaawansowana}
@@ -57,6 +58,6 @@
 \section{Zainteresowania:}
 \cvitem{zw. z wykształceniem}{Zagadnienia związane z analizą danych (Big Data, klastrowanie)}
 \cvitem{pozostałe}{Rysunek - grafika, oraz popularno-naukowo biologia i technologia lotnicza.}
-\textit{\\ \\„Wyrażam zgodę na przetwarzanie moich danych osobowych, zgodnie z przepisami ustawy z 29.08.1997 o ochronie danych osobowych (Dz. U. z 2002 r. Nr 101, póz. 926 z póz. zm.)."} 
+\textit{\\ \\„Wyrażam zgodę na przetwarzanie moich danych osobowych, zgodnie z przepisami ustawy z 29.08.1997 o ochronie danych osobowych (Dz. U. z 2002 r. Nr 101, póz. 926 z póz. zm.)."}
 
 \end{document}
