--- a/cv_eng.tex
+++ b/cv_eng.tex
@@ -5,9 +5,9 @@
 \usepackage[utf8]{inputenc}
 \usepackage{polski}
 
-\usepackage[a4paper, margin=1in]{geometry}
+\usepackage[a4paper, margin=0.5in]{geometry}
 
-\firstname{Jakub} 
+\firstname{Jakub}
 \familyname{Wida}
 \title{Curriculum Vitae}
 \address{Pleszowska 16}{Poland, Kraków, 31-228}
@@ -26,7 +26,8 @@
 
 \cventry{2010--2013}{International Baccalaureate}{}{\newline VIII Private Academic General High School (VIII PALO), Kraków}{}{}
 
-\cventry{2014--2017}{Studies in Mathematics and Natural Sciences (SMP), \newline main branch: Computer Science (Informatyka)}{\newline completed Bachelor studies}{ \newline Jagiellonian University in Kraków (UJ), department of Physics, Astronomy and Applied Computer Science (FAIS) }{}{}{}
+\cventry{2014--2017}{Studies in Mathematics and Natural Sciences (SMP), Bachelor's, \newline main branch: Computer Science (Informatyka)}{completed}{ \newline Jagiellonian University in Kraków (UJ), department of Physics, Astronomy and Applied Computer Science (FAIS) }{}{}{}
+\cventry{2017--Current}{Applied Computer Science (Informatyka Stosowana), Master's}{I year}{ \newline Jagiellonian University in Kraków (UJ), department of Physics, Astronomy and Applied Computer Science (FAIS) }{}{}{}
 \section{Experience}
 \cventry{2017}{General Intelligence Systems ltd.}{three-week internship}{\newline front-end developer}{}{}{}{}
 \section{Career goals}
@@ -41,7 +42,7 @@
 \cvitem{Lower-Intermediate}
 	{\begin{itemize}%
 	\item \textbf{SQL: MySQL, SQLite};
-	\item \textbf{Java} including Swing library;
+	\item \textbf{Java};
 	\item \textbf{HTML5, CSS3} (RWD methodology);
 	\end{itemize}}
 \cvitem{Intermediate}
@@ -60,7 +61,7 @@
 \cvitem{provate}{Drawing, popular biology and aviation technology.}
 \hfill
 
-\textit{\\„Wyrażam zgodę na przetwarzanie moich danych osobowych, zgodnie z przepisami ustawy z 29.08.1997 o ochronie danych osobowych (Dz. U. z 2002 r. Nr 101, póz. 926 z póz. zm.)."} 
+\textit{\\„Wyrażam zgodę na przetwarzanie moich danych osobowych, zgodnie z przepisami ustawy z 29.08.1997 o ochronie danych osobowych (Dz. U. z 2002 r. Nr 101, póz. 926 z póz. zm.)."}
 
 \textit{\\I hereby give consent for my personal data included in my application to be processed for the purposes of the recruitment process under the Personal Data Protection Act as of 29 August 1997, consolidated text: Journal of Laws 2002, item 926 as amended.}
 
