changed cv, bash file

--- a/cv.tex
+++ b/cv.tex
@@ -44,12 +44,13 @@
 	\item \textbf{SQL: MySQL, SQLite};
 	\item \textbf{Java};
 	\item \textbf{HTML5, CSS3} (metodologia RWD);
+	\item \textbf{Autocad} (Ukończony kurs semestralny);
 	\end{itemize}}
 \cvitem{Średnio-zaawansowana}
 	{
 	\begin{itemize}%
 	\item \textbf{Python};
-	\item \textbf{Javascript} framework Angular 2 (typescript);
+	\item \textbf{Javascript} framework-i Angular 2+ (typescript), React ;
 	\end{itemize}
 	}
 \cvitem{Systemy Operacyjne}{Średnio-zaawansowan obsługa systemów rodziny \textbf{Windows} i \textbf{Linux} przy podstawowej znajomości obsługi za pomocą terminala tekstowego}
