--- a/cv_eng.tex
+++ b/cv_eng.tex
@@ -44,12 +44,13 @@
 	\item \textbf{SQL: MySQL, SQLite};
 	\item \textbf{Java};
 	\item \textbf{HTML5, CSS3} (RWD methodology);
+	\item \textbf{Autocad} (Completed semestral course);
 	\end{itemize}}
 \cvitem{Intermediate}
 	{
 	\begin{itemize}%
 	\item \textbf{Python};
-	\item \textbf{Javascript} Angular 2 front-end framework (typescript);
+	\item \textbf{Javascript} Angular 2+ (typescript), React front-end frameworks;
 	\end{itemize}
 	}
 \cvitem{Operating Systems}{Intermediate knowledge of \textbf{Windows} and \textbf{Linux} system families, with basic skills in the use of text terminal.}
